<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/img_backgroundapp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar01"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="259dp"
            android:layout_height="104dp"
            android:src="@drawable/img_app" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/tv_subt_login"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="-43dp"
        android:layout_width="match_parent"
        android:layout_height="639dp"
        android:orientation="vertical"
        android:padding="20dp">

        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_editext1"
                android:drawableStart="@drawable/icon_email"
                android:drawablePadding="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray01" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_editext1"
                android:drawableStart="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray01" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/recuperarContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:text="@string/link_forgotpass_login"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnLoguearse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/btn_login_login" />

        <TextView
            android:id="@+id/link_vistaRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:gravity="center"
            android:text="@string/link_login_register"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>