<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity"
    android:gravity="center"
    android:padding="40dp"
    android:orientation="vertical"
    android:background="@drawable/img_backgroundapp">

    <!--Image App Principle-->
    <ImageView
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/img_app"/>
    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginBottom="90dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="15dp"
        android:backgroundTint="@color/black"
        android:text="@string/textLogin"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="15dp"
        android:backgroundTint="@color/black"
        android:text="@string/textRegister"/>


</LinearLayout>