<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterActivity"
    android:orientation="vertical"
    android:background="@drawable/img_backgroundapp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar01"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="259dp"
            android:layout_height="104dp"
            android:src="@drawable/img_app" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/tv_subt_register"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>


    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/txtNombre"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/hint_name"
                android:textColor="@color/black"
                android:textColorHint="@color/gray01"
                android:background="@drawable/shape_editext1"
                android:drawableStart="@drawable/icon_person"
                android:drawablePadding="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_editext1"
                android:drawableStart="@drawable/icon_email"
                android:drawablePadding="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray01" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_editext1"
                android:drawableStart="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray01" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/txtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_editext1"
                android:drawableStart="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:hint="@string/hint_confirm_password"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray01" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnRegistrar"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_register_register"/>

        <TextView
            android:id="@+id/link_vistaLogin"
            android:layout_marginTop="180dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:text="you have a account ? Login"/>

    </LinearLayout>

</LinearLayout>